--- a/hello_world/templates/hello_world.html
+++ b/hello_world/templates/hello_world.html
@@ -2,4 +2,5 @@
 
 {% block page_content %}
 <h1>Hello world!</h1>
+<button type="button" class="btn btn-primary">Bootstrap button</button>
 {% endblock %}
